--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -29,6 +29,9 @@
 		<p>
 			<i class="fab fa-facebook-f"></i> {% if venue.facebook_link %}<a href="{{ venue.facebook_link }}" target="_blank">{{ venue.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
 		</p>
+		<p>
+			<button class="delete-btn" onclick="deleteVenue({{ venue.id }})">Delete Venue</button>
+		</p>
 		{% if venue.seeking_talent %}
 		<div class="seeking">
 			<p class="lead">Currently seeking talent</p>
