--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -26,7 +26,7 @@
 			<div class="form-group">
 				<label for="genres">Genres</label>
 				<small>Ctrl+Click to select multiple</small>
-				{{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true, value=artist.genres) }}
+				{{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true, selectedFields=artist.genres) }}
 			</div>
 			<div class="form-group">
 				<label for="image_link">Image Link</label>
@@ -53,6 +53,25 @@
 				{{ form.seeking_description(class_ = 'form-control', autofocus = true, value=artist.seeking_description) }}
 			</div>
 			<input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
+			<script>
+				// Select all Genre options that were stored in the db.
+				let selectObj = document.querySelector('#genres');
+				let selectedFields = selectObj.getAttribute('selectedFields').split(',');
+				
+				for( let field of selectedFields ){
+
+					for( let i = 0; i < selectObj.options.length; i++ ){
+
+						if( field == selectObj.options[i].value ){
+
+							selectObj.options[i].selected = true;
+
+						}
+
+					}
+					
+				}
+			</script>
 		</form>
 	</div>
 {% endblock %}
